fix scrollbar border

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -55,9 +55,10 @@ a:hover {
 
 ::-webkit-scrollbar-thumb
 {
-  background-color: #cfcfcf;
+  background-color: rgba(0, 0, 0, 0.1);
   border-radius: 15px;
-  border: 6px solid #f2f2f2;
+  border: 6px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
 
   &:hover {
     background-color: #b3b3b3;
